--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^1.2.8",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-loading-overlay": "^3.2.0",
     "vue-material": "^1.0.0-beta-11"
   },
   "devDependencies": {
